--- a/form3.html
+++ b/form3.html
@@ -311,8 +311,8 @@
         });
         const inputText = document.getElementById('inputText').value;
         // Store selectedTypes and inputText for later use, e.g., in local storage or send to server
-        localStorage.setItem('selectedTypes', JSON.stringify(selectedTypes));
-        localStorage.setItem('inputText', inputText);
+        localStorage.setItem('digitalTwinControlTypeButton', JSON.stringify(selectedTypes));
+        localStorage.setItem('digitalTwinControlTypeText', inputText);
         window.location.href = 'form4.html'; // Adjust this URL as needed
     }
 </script>
