--- a/form5.html
+++ b/form5.html
@@ -311,9 +311,9 @@
         });
         const inputText = document.getElementById('inputText').value;
         // Store selectedTypes and inputText for later use, e.g., in local storage or send to server
-        localStorage.setItem('selectedTypes', JSON.stringify(selectedTypes));
-        localStorage.setItem('inputText', inputText);
-        window.location.href = 'form6.html'; // Adjust this URL as needed
+        localStorage.setItem('digitalTwinDataSourceButton', JSON.stringify(selectedTypes));
+        localStorage.setItem('digitalTwinDataSourceText', inputText);
+        window.location.href = 'form6.html';
     }
 </script>
 
