--- a/form4.html
+++ b/form4.html
@@ -311,8 +311,8 @@
         });
         const inputText = document.getElementById('inputText').value;
         // Store selectedTypes and inputText for later use, e.g., in local storage or send to server
-        localStorage.setItem('selectedTypes', JSON.stringify(selectedTypes));
-        localStorage.setItem('inputText', inputText);
+        localStorage.setItem('digitalTwinDataTransferButton', JSON.stringify(selectedTypes));
+        localStorage.setItem('digitalTwinDataTransferText', inputText);
         window.location.href = 'form5.html'; // Adjust this URL as needed
     }
 </script>
