--- a/form3.html
+++ b/form3.html
@@ -219,18 +219,18 @@
             width: 101px;
             height: 22px;
             position: absolute;
-            font-size: 16px;
+            font-size: 20px;
             font-weight: 700;
-            color: black;
+            color: rgb(221, 23, 23);
             cursor: pointer;
         }
         .go-back {
-            top: 983px;
-            left: 1240px;
+            top: 550px;
+            left: -100px;
         }
         .next {
-            top: 983px;
-            left: 1350px;
+            top: 550px;
+            left: 1450px;
         }
         .freitextfeld {
             width: 1256px;
