--- a/form7.html
+++ b/form7.html
@@ -207,18 +207,18 @@
             width: 101px;
             height: 22px;
             position: absolute;
-            font-size: 16px;
+            font-size: 20px;
             font-weight: 700;
-            color: black;
+            color: rgb(221, 23, 23);
             cursor: pointer;
         }
         .go-back {
-            top: 983px;
-            left: 1240px;
+            top: 550px;
+            left: -100px;
         }
         .next {
-            top: 983px;
-            left: 1350px;
+            top: 550px;
+            left: 1450px;
         }
         .freitextfeld {
             width: 1256px;
@@ -246,7 +246,7 @@
     <div class="subheader"></div>
     <div class="footer"></div>
     <div class="button none" onclick="toggleSelection('none')">None (Ad hoc Modelling)</div>
-    <div class="button DataCleaning" onclick="toggleSelection('data cleaning')">Data Cleaning</div>
+    <div class="button DataCleaning" onclick="toggleSelection('DataCleaning')">Data Cleaning</div>
     <div class="button semantic" onclick="toggleSelection('semantic')">Semantic Enrichment</div>
     <div class="input-box"></div>
     <div class="freitextfeld">
