--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         .text.header {
             width: 367px;
             height: 57px;
-            top: 207px; /* Adjusted 5px deeper */
+            top: 207px; 
             left: 28px;
             background-color: #AF1D59;
             padding: 10px;
@@ -142,7 +142,7 @@
             height: 164px;
             position: absolute;
             top: 736px;
-            left: 90px; /* Adjusted to align with other sections */
+            left: 90px; 
             color: white;
             font-size: 20px;
             font-weight: 300;
@@ -151,8 +151,8 @@
             width: 562px;
             height: 63px;
             position: absolute;
-            top: 685px; /* Adjusted position */
-            left: 55px; /* Adjusted to align with other sections */
+            top: 685px; 
+            left: 55px; 
             text-align: center;
             color: white;
             font-size: 32px;
@@ -182,8 +182,8 @@
         }
         .icon-container {
             position: absolute;
-            top: 197px; /* Adjusted 5px higher */
-            left: 841px; /* Adjusted to align further right */
+            top: 197px; 
+            left: 841px; 
             width: 550px;
             height: 75px;
             background-color: #AF1D59;
