--- a/form2.html
+++ b/form2.html
@@ -56,7 +56,7 @@
             position: absolute;
             text-align: center;
             color: white;
-            font-size: 24px; /* Adjusted font size */
+            font-size: 24px; 
             display: flex;
             align-items: center;
             justify-content: center;
@@ -154,7 +154,7 @@
             height: 164px;
             position: absolute;
             top: 736px;
-            left: 90px; /* Adjusted to align with other sections */
+            left: 90px; 
             color: white;
             font-size: 20px;
             font-weight: 300;
@@ -163,8 +163,8 @@
             width: 562px;
             height: 63px;
             position: absolute;
-            top: 685px; /* Adjusted position */
-            left: 55px; /* Adjusted to align with other sections */
+            top: 685px; 
+            left: 55px; 
             text-align: center;
             color: white;
             font-size: 32px;
@@ -194,8 +194,8 @@
         }
         .icon-container {
             position: absolute;
-            top: 197px; /* Adjusted 5px higher */
-            left: 841px; /* Adjusted to align further right */
+            top: 197px;
+            left: 841px; 
             width: 550px;
             height: 75px;
             background-color: #AF1D59;
@@ -313,7 +313,7 @@
         // Store selectedTypes and inputText for later use, e.g., in local storage or send to server
         localStorage.setItem('digitalTwinDataButton', JSON.stringify(selectedTypes));
         localStorage.setItem('digitalTwinDataText', inputText);
-        window.location.href = 'form3.html'; // Adjust this URL as needed
+        window.location.href = 'form3.html'; 
     }
 </script>
 
