--- a/results.html
+++ b/results.html
@@ -102,6 +102,9 @@
             position: absolute;
             text-align: center;
             color: white;
+            display: flex; /* Use flexbox for alignment */
+    align-items: center; /* Center vertically */
+    justify-content: center; /* Center horizontally */
             font-size: 12px;
             font-weight: 400;
         }
