--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     <div class="text main name">Please type in the name of your physical object:</div>
     <div class="main-question">What do you want to create a digital twin of?</div>
     <div class="footer-title">Helpful Information | External Links</div>
-    <div class="info-text">Digital Twins can come in various forms This application works as a morphological box that helps you define essential design elements of your digital twin. As a result you will get a first IT system architecture that will help you to develop and implement your digital twin solution. If you face any troubles using the application or if you want to discuss the development of your digital twin, feel free to reach out to kremer@tu-berlin.de.</div>
+    <div class="info-text">Digital Twins can come in various forms This application works as a morphological box that helps you define essential design elements of your digital twin. As a result you will get a first IT system architecture that will help you to develop and implement your digital twin solution. The predefined elements are buildt with a focus on digital twins of assets. Nonetheless you can adapt this by entering your own solutions for your specific use case.  The morphological box application is inspired by (<a href="https://doi.org/10.1016/j.cirp.2019.04.024" target="_blank"  style="color: white; text-decoration: underline;">Stark et al., 2019</a>). If you face any troubles using the application or if you want to discuss the development of your digital twin, feel free to reach out to kremer@tu-berlin.de</div>
     <div class="main-title">In 10 Steps to Your Digital Twin:<br/>Defining Essential Design Elements</div>
     <img class="logo" src="logo.png" alt="Logo">
     <img class="logo2" src="Logo2.svg" alt="Logo 2">
