--- a/index.html
+++ b/index.html
@@ -184,13 +184,14 @@
             position: absolute;
             top: 197px; 
             left: 841px; 
-            width: 550px;
+            width: 570px;
             height: 75px;
             background-color: #AF1D59;
             display: flex;
             align-items: center;
             justify-content: space-between;
             padding: 10px;
+            box-sizing: border-box;
         }
         .icon {
             width: 55px;
@@ -209,8 +210,20 @@
             position: absolute;
             font-size: 20px;
             font-weight: 700;
-            color: rgb(221, 23, 23);
+            color: white;
+            background: #E50046;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             cursor: pointer;
+            border: none;
+            border-radius: 4px;
+            text-align: center;
+            transition: background 0.3s ease;
+        }
+        .go-back:hover,
+        .next:hover {
+            background: #CC0040;
         }
         .go-back {
             top: 550px;
