add design elements and fix small issues

--- a/form10.html
+++ b/form10.html
@@ -49,6 +49,16 @@
             height: 256px;
             top: 673px;
         }
+        .footer-element {
+            position: absolute;
+            width: 1300px;
+            height: 63px;
+            top: 895px;
+            right: 40px;
+            text-align: right;
+            color: white;
+            font-size: 22px;
+        }
         .button {
             width: 310px; /* Adjusted width for smaller buttons */
             height: 50px;
@@ -308,6 +318,7 @@
     </div>
     <div class="go-back" onclick="history.back()">GO BACK</div>
     <div class="next" onclick="goToNextPage()">NEXT</div>
+    <div class="footer-element">Design Element 4: Digital master and digital prototype models</div>
 </div>
 
 <script>
