--- a/form10.html
+++ b/form10.html
@@ -297,10 +297,10 @@
     </div>
     <div class="text header">Model Use</div>
     <div class="text main type">Please choose (more than one selection is possible):</div>
-    <div class="text main name">If none of the above mentioned is correct, please type in your solution here:</div>
+    <div class="text main name">If none of the options mentioned above is correct, please type in your solution here:</div>
     <div class="main-question">What type of models do you use for twinning?</div>
     <div class="footer-title">Helpful Information | External Links</div>
-    <div class="info-text">Digital twins utilize various models to accurately replicate physical systems. Geometric models represent the physical shape and structure. Physics-based models simulate physical phenomena based on fundamental principles. Data-driven models rely on historical and real-time data to predict behaviors. Physics-informed machine learning combines data-driven approaches with physical laws to enhance model accuracy. System models integrate multiple aspects, including mechanical, electrical, and software components, to provide a comprehensive view of the system. These models collectively enable detailed and dynamic simulations for effective monitoring and optimization of physical assets (<a href="https://arxiv.org/pdf/2208.14197" target="_blank"  style="color: white; text-decoration: underline;">Thelen et al., 2022</a>).</div>
+    <div class="info-text">Digital twins utilize various models to accurately replicate physical systems. Geometric models represent the physical shape and structure. Physics-based models simulate physical phenomena based on fundamental principles. Data-driven models rely on historical and real-time data to predict behaviors. Physics-informed machine learning (ML) combines data-driven approaches with physical laws to enhance model accuracy. System models integrate multiple aspects, including mechanical, electrical, and software components, to provide a comprehensive view of the system. These models collectively enable detailed and dynamic simulations for effective monitoring and optimization of physical assets (<a href="https://arxiv.org/pdf/2208.14197" target="_blank"  style="color: white; text-decoration: underline;">Thelen et al., 2022</a>).</div>
     <div class="main-title">In 10 Steps to Your Digital Twin:<br/>Defining Essential Design Elements</div>
     <img class="logo" src="logo.png" alt="Logo">
     <img class="logo2" src="Logo2.svg" alt="Logo 2">
@@ -318,7 +318,7 @@
     </div>
     <div class="go-back" onclick="history.back()">GO BACK</div>
     <div class="next" onclick="goToNextPage()">NEXT</div>
-    <div class="footer-element">Design Element 4: Digital master and digital prototype models</div>
+    <div class="footer-element">Design Element 4: Digital Master and Digital Prototype models</div>
 </div>
 
 <script>
