--- a/form5.html
+++ b/form5.html
@@ -286,7 +286,7 @@
     <div class="subheader"></div>
     <div class="footer"></div>
     <div class="button none" onclick="toggleSelection('none')">None</div>
-    <div class="button weather" onclick="toggleSelection('weather')">Weather data</div>
+    <div class="button weather" onclick="toggleSelection('weather')">Weather Data</div>
     <div class="button erp" onclick="toggleSelection('erp')">ERP Data</div>
     <div class="button plm" onclick="toggleSelection('plm')">PLM Data</div>
     <div class="button market" onclick="toggleSelection('market')">Market and Economic Data</div>
@@ -297,10 +297,10 @@
     </div>
     <div class="text header">Other Data Sources</div>
     <div class="text main type">Please choose (more than one selection is possible):</div>
-    <div class="text main name">If none of the above mentioned is correct, please type in your solution here:</div>
+    <div class="text main name">If none of the options mentioned above is correct, please type in your solution here:</div>
     <div class="main-question">What other external or company internal data sources are used for your digital twin?</div>
     <div class="footer-title">Helpful Information | External Links</div>
-    <div class="info-text">Digital twins use various external data sources for accurate and real-time modeling of physical systems. Common sources include: Sensor data from IoT devices provide real-time metrics like temperature, pressure, and vibration. Geospatial data from GIS systems support spatial analysis and mapping. Weather data offers real-time and historical information for environmental impact analysis. Data from enterprise systems such as ERP, CRM, and SCM provide operational and business insights. Market and economic data, including trends and financial indicators, assist in strategic planning. Social media and public sentiment data offer insights into public opinion. Maintenance and historical data are used for predictive maintenance based on past performance and maintenance records. These sources ensure comprehensive and precise digital twin functions.</div>
+    <div class="info-text">Digital twins can use various external data sources for accurate and real-time modeling of physical systems. Common sources include: Sensor data from IoT devices provide real-time metrics like temperature, pressure, and vibration. Geospatial data from Geographic Information Systems (GIS) support spatial analysis and mapping. Weather data offers real-time and historical information for environmental impact analysis. Data from enterprise systems such as Enterprise Resource Planning (ERP), Customer Relationship Management (CRM), and Supply Chain Management (SCM) provide operational and business insights. Market and economic data, including trends and financial indicators, assist in strategic planning. Social media and public sentiment data offer insights into public opinion. Maintenance and historical data are used for predictive maintenance based on past performance and maintenance records. These sources ensure comprehensive and precise digital twin functions.</div>
     <div class="main-title">In 10 Steps to Your Digital Twin:<br/>Defining Essential Design Elements</div>
     <img class="logo" src="logo.png" alt="Logo">
     <img class="logo2" src="Logo2.svg" alt="Logo 2">
@@ -318,7 +318,7 @@
     </div>
     <div class="go-back" onclick="history.back()">GO BACK</div>
     <div class="next" onclick="goToNextPage()">NEXT</div>
-    <div class="footer-element">Design Element 5: Digital shadow data & information sets</div>
+    <div class="footer-element">Design Element 5: Digital Shadow data and information sets</div>
 </div>
 
 <script>
