--- a/form7.html
+++ b/form7.html
@@ -273,7 +273,7 @@
     <div class="main-content"></div>
     <div class="subheader"></div>
     <div class="footer"></div>
-    <div class="button none" onclick="toggleSelection('none')">None (Ad hoc Modelling)</div>
+    <div class="button none" onclick="toggleSelection('none')">None (Ad hoc modelling)</div>
     <div class="button DataCleaning" onclick="toggleSelection('DataCleaning')">Data Cleaning</div>
     <div class="button semantic" onclick="toggleSelection('semantic')">Semantic Enrichment</div>
     <div class="input-box"></div>
@@ -303,7 +303,7 @@
     </div>
     <div class="go-back" onclick="history.back()">GO BACK</div>
     <div class="next" onclick="goToNextPage()">NEXT</div>
-    <div class="footer-element">Design Element 5: Digital shadow data & information sets</div>
+    <div class="footer-element">Design Element 5: Digital Shadow data and information sets</div>
 </div>
 
 <script>
