--- a/form9.html
+++ b/form9.html
@@ -297,7 +297,7 @@
     </div>
     <div class="text header">Twinning Engine</div>
     <div class="text main type">Please choose (more than one selection is possible):</div>
-    <div class="text main name">If none of the above mentioned is correct, please type in your solution here:</div>
+    <div class="text main name">If none of the options mentioned above is correct, please type in your solution here:</div>
     <div class="main-question">What kind of twinning engine do you use?</div>
     <div class="footer-title">Helpful Information | External Links</div>
     <div class="info-text">Simulink by MathWorks models and simulates dynamical systems, integrating real-time data for control systems and physical modeling, like an automotive control system. Ansys Twin Builder creates simulation-based digital twins in aerospace and automotive, such as an aircraft engine for predictive maintenance. Siemens MindSphere connects machines to the digital world for process optimization and maintenance, exemplified by a manufacturing plant twin. GE Predix provides real-time analytics and asset management in energy and healthcare, like a power grid twin. PTC ThingWorx integrates analytics for manufacturing, such as a production line twin. IBM Maximo uses IoT and AI for asset management in utilities, creating twins for predictive maintenance, like a utility network.</div>
