--- a/form8.html
+++ b/form8.html
@@ -285,11 +285,11 @@
     <div class="main-content"></div>
     <div class="subheader"></div>
     <div class="footer"></div>
-    <div class="button gps" onclick="toggleSelection('gps')">GPS-/Position-Sensor</div>
-    <div class="button ecg" onclick="toggleSelection('ecg')">ECG (Pulse)-Sensor</div>
+    <div class="button gps" onclick="toggleSelection('gps')">GPS/Position Sensor</div>
+    <div class="button ecg" onclick="toggleSelection('ecg')">ECG (Pulse) Sensor</div>
     <div class="button flexometer" onclick="toggleSelection('flexometer')">Flexometer</div>
-    <div class="button force" onclick="toggleSelection('force')">Force-Sensor</div>
-    <div class="button humidity" onclick="toggleSelection('humidity')">Temperature-Sensor</div>
+    <div class="button force" onclick="toggleSelection('force')">Force Sensor</div>
+    <div class="button humidity" onclick="toggleSelection('humidity')">Temperature Sensor</div>
     <div class="button ecu" onclick="toggleSelection('ecu')">Operational Data by ECU</div>
     <div class="input-box"></div>
     <div class="freitextfeld">
@@ -297,7 +297,7 @@
     </div>
     <div class="text header">Data Capturing</div>
     <div class="text main type">Please choose one type:</div>
-    <div class="text main name">If none of the above mentioned is correct, please type in your solution here:</div>
+    <div class="text main name">If none of the options mentioned above is correct, please type in your solution here:</div>
     <div class="main-question">How will the data for your digital twin be captured?</div>
     <div class="footer-title">Helpful Information | External Links</div>
     <div class="info-text">Digital twins use various sensors to capture real-time data. Temperature sensors monitor heat, pressure sensors measure liquids and gases, and humidity sensors track moisture levels. Position and speed sensors monitor moving parts and velocities, while motion sensors detect vibrations. Force sensors measure weights, and flow sensors gauge fluid rates. Light sensors control lighting, acoustic sensors monitor sounds, and gas sensors detect air quality. Optical sensors, like cameras and LIDAR, handle imaging and distances. Sensor choice depends on the application, ensuring precise data for accurate modeling. An analysis of the most commonly used sensors in IoT devices can be found in <a href="https://www.mdpi.com/2078-2489/13/5/241" target="_blank" style="color: white; text-decoration: underline;">(Montalvo et al., 2022)</a>.</div>
