--- a/form3.html
+++ b/form3.html
@@ -297,7 +297,7 @@
     </div>
     <div class="text header">Electronic Control Unit</div>
     <div class="text main type">Please choose (more than one selection is possible):</div>
-    <div class="text main name">If none of the options mentioned above is correct, please type in your solution here:</div>
+    <div class="text main name">If none of the options mentioned above fits, please type in your solution here:</div>
     <div class="main-question">How is your physical object controlled?</div>
     <div class="footer-title">Helpful Information | External Links</div>
     <div class="info-text">Implementing Electronic Control Units (ECUs) involves specialized hardware, firmware, and software tools. ECUs use robust microcontrollers or microprocessors for real-time control, connected to various sensors and actuators. In the automotive industry, ECUs manage various vehicle functions. The Engine Control Unit optimizes engine performance and fuel efficiency. In advanced driver-assistance systems (ADAS), specific ECUs handle features like adaptive cruise control, lane-keeping assistance, and automated parking. In industrial automation, Programmable Logic Controllers (PLCs) are a type of ECU used to control machinery and processes. Each type of ECU is tailored to specific functions and environments, highlighting the versatility and importance of these units in modern technology.</div>
