--- a/form5.html
+++ b/form5.html
@@ -297,7 +297,7 @@
     </div>
     <div class="text header">Other Data Sources</div>
     <div class="text main type">Please choose (more than one selection is possible):</div>
-    <div class="text main name">If none of the options mentioned above is correct, please type in your solution here:</div>
+    <div class="text main name">If none of the options mentioned above fits, please type in your solution here:</div>
     <div class="main-question">What other external or company internal data sources are used for your digital twin?</div>
     <div class="footer-title">Helpful Information | External Links</div>
     <div class="info-text">Digital twins can use various external data sources for accurate and real-time modeling of physical systems. Common sources include: Sensor data from IoT devices provide real-time metrics like temperature, pressure, and vibration. Geospatial data from Geographic Information Systems (GIS) support spatial analysis and mapping. Weather data offers real-time and historical information for environmental impact analysis. Data from enterprise systems such as Enterprise Resource Planning (ERP), Customer Relationship Management (CRM), and Supply Chain Management (SCM) provide operational and business insights. Market and economic data, including trends and financial indicators, assist in strategic planning. Social media and public sentiment data offer insights into public opinion. Maintenance and historical data are used for predictive maintenance based on past performance and maintenance records. These sources ensure comprehensive and precise digital twin functions.</div>
